# testovoe-workmate

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  codecov.yaml  pyproject.toml
.github/workflows/: tests.yml
app/: __main__.py
app/application/common/ports/: formatter.py  writer.py
app/application/reports/interactors/: get_payout_report.py
app/domain/common/entities/base/: entity.py  value_object.py
app/domain/common/entities/validators/email/: consts.py  logic.py
app/domain/common/entities/value_objects/: email.py
app/domain/common/exceptions/: base.py  value_objects.py
app/domain/reports/: registry.py
app/domain/reports/entities/employee/: entity.py  value_objects.py
app/domain/reports/entities/report/: value_objects.py
app/domain/reports/ports/: parser.py  reader.py
app/domain/reports/services/: payout_service.py  reports_service.py
app/infrastructure/adapters/application/formatters/: table_formatter.py
app/infrastructure/adapters/application/writers/: file_writer.py  stdout_writer.py
app/infrastructure/adapters/domain/parsers/: csv_parser.py
app/infrastructure/adapters/domain/readers/: file_reader.py
app/infrastructure/descriptors/csv_descriptors/dialects/: __init__.py  dialect.py  excel_dialect.py
app/infrastructure/enums/: csv_enums.py
app/infrastructure/exceptions/: descriptors.py
tests/unit/: conftest.py
tests/unit/application/reports/interactors/: test_payout_interactor.py
tests/unit/domain/entities/base/: test_entity.py  test_value_object.py
tests/unit/domain/entities/common/: test_email_value_object.py
tests/unit/domain/entities/employee/: test_entity.py  test_value_objects.py
tests/unit/domain/services/: test_payout_service.py  test_report_service.py
tests/unit/infrastructure/adapters/: test_csv_parser.py  test_file_reader.py  test_file_writer.py  test_stdout_writer.py  test_table_formatter.py
tests/unit/infrastructure/descriptors/: test_csv_dialect.py
